# LocalDGP

./: CMakeLists.txt  GNNs.py  README.md  __init__.py
src/: CMakeCache.txt  LocalWGVP  METIS_cal  Makefile  bash  cmake_install.cmake  disk_graph.cpp  disk_graph.hpp  g_convert  g_convert.cpp  main.cpp  memory_monitor.cpp  memory_monitor.h  partitioner.cpp  partitioner.h  stream  util.cpp  util.h
util/: Module.py  Sampler.py  find.py  li_Partitioner.py
